# tree-sitter-groovy

./: .gitignore  .markdownlint-cli2.jsonc  .taplo.toml  .typos.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  Makefile  Package.swift  README.md  SECURITY.md  SPECIFICATION.md  binding.gyp  deny.toml  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.claude/skills/audit-tests/: SKILL.md
.claude/skills/batch-fix/: SKILL.md
.claude/skills/fix-issue/: SKILL.md
.claude/skills/issue-plan/: SKILL.md
.claude/skills/issue-triage/: SKILL.md
.claude/skills/lessons-learned/: SKILL.md
.claude/skills/review/: SKILL.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  regenerate.yml  release.yml
bindings/c/: tree-sitter-groovy.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  binding_test.js  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_groovy/: __init__.py
bindings/rust/: build.rs  lib.rs
bindings/rust/tests/: parse_stress.rs
docs/: IMPLEMENTATION_PROGRESS.md  RALPH_LOOP_PROMPT.md  cutting-a-release.md  divergences-from-spec.md  lessons_learned.md
ftdetect/: groovy.lua
queries/groovy/: folds.scm  highlights.scm  indents.scm  injections.scm  locals.scm  tags.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: .gitkeep  comments.txt  declarations-annotation-type.txt  declarations-annotation.txt  declarations-array-types.txt  declarations-class.txt  declarations-constructors.txt  declarations-enum.txt  declarations-fields.txt  declarations-generics.txt  declarations-inheritance.txt  declarations-method-signatures.txt  declarations-modifiers.txt  declarations-package-import.txt  declarations-qualified-types.txt  declarations-record.txt  declarations-sealed.txt  declarations-shebang.txt  declarations-variable.txt  expressions-arithmetic.txt  expressions-binary.txt  expressions-closure.txt  expressions-command-chain.txt  expressions-list-map.txt  expressions-literals.txt  expressions-method-invocation.txt  expressions-numbers.txt  expressions-object-creation.txt  expressions-quoted-identifier.txt  expressions-strings.txt  expressions-unary.txt  expressions-update.txt  operators-access.txt  operators-as-cast.txt  operators-assignment.txt  operators-coercion.txt  operators-direct-field.txt  operators-elvis.txt  operators-identity.txt  operators-implication.txt  (+24 more)
test/highlight/: comments.groovy  functions.groovy  generics.groovy  keywords.groovy  literals.groovy  numbers.groovy  strings.groovy  types.groovy
test/stress/: SOURCES.md  arithmetic_and_ranges.groovy  class_with_methods.groovy  closures_and_lists.groovy  control_flow.groovy  generics.groovy  gradle_buildscript.groovy  imports_and_package.groovy  jenkins_pipeline.groovy  operators_grab_bag.groovy
