[package]
name = "tree-sitter-groovy"
description = "Apache Groovy grammar for the tree-sitter parsing library"
version = "0.1.0"
keywords = ["incremental", "parsing", "groovy", "jenkins", "gradle"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/dekobon/tree-sitter-groovy"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0 OR MIT"

build = "bindings/rust/build.rs"
include = [
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1.7"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25"
