[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-groovy"
description = "Apache Groovy grammar for the tree-sitter parsing library"
version = "0.1.0"
keywords = [
  "incremental",
  "parsing",
  "tree-sitter",
  "groovy",
  "jenkins",
  "gradle",
]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
requires-python = ">=3.8"
license = "Apache-2.0 OR MIT"
license-files = ["LICENSE-APACHE", "LICENSE-MIT"]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/dekobon/tree-sitter-groovy"

[project.optional-dependencies]
core = ["tree-sitter~=0.25"]

[tool.cibuildwheel]
build = "cp38-*"
build-frontend = "build"
